# taskbutler

./: .gitignore  .pyup.yml  .pyup.yml.TMP_DISABLE  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  config.ini.sample  config.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  taskbutler.py  todoist-progress.sln  todoist-progressbar.py  todoist_progress.spec  tox.ini
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  devskim-analysis.yml  release.yml  synopsys-io-analysis.yml
debian/: Vagrantfile  changelog  control  rules  taskbutler.links  taskbutler.triggers  vagrant_bootstrap.sh
debian/debian/: control  rules
debian/pypi/: dropbox-9.1.0-py3-none-any.whl  todoist_python-7.0.18-py2.py3-none-any.whl
docs/: Makefile  conf.py  dev_template.rst  devnotes.md  index.rst  installation.rst  make.bat  modules.rst  taskbutler.rst  usage.rst
taskbutler/: __init__.py  cli.py  config.ini.sample  config.py  taskbutler.py  testfile.html
taskbutler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
taskbutler/helpers/: __init__.py  github.py  jira.py  todoist.py
tests/: test_Class_GetLabelID.py  test_Class_checkforupdate.py  test_Class_gettaskwithlabelid.py  test_basics.py  test_grocery.py  test_taskbutler.py  test_test_environment.py  todoist_testdata_after.json  todoist_testdata_before.json
tests/bats/: script_setup.sh  test_basic.bats
todoist-progress/: ame.spec  config.py  requirements.txt  todoist-progress.pyproj  todoist_progress.py  todoist_progress.spec
